# MagPhyxP

./: .gitignore  CMakeLists.txt  Dipole.h  Edges.ipynb  Event.h  MagPhyxP.i  Makefile  Minimum.h  Options.cpp  Options.h  Physics.h  Stepper.h  bifurcation.py  convergence_in_phase.csv  convergence_out_phase.csv  find_modes.ipynb  find_modes.py  largebounce.py  magphyxp.cpp  magphyxp_impl.cpp  main.cpp  rename-snapshots  setup.py  test.ipynb  vec.h
vis/: bifurcation1.txt  bifurcations-duplicates.txt  bifurcations.txt  et.js  index.html  integralspider.csv  main.js  num-modes.csv  output.json  output.txt  output2.json  output2.txt  spiderWeb.js  states.txt  states_all.json  style.css  txt2json.ipynb  unique.txt
vis/states/: states001.txt  states001_1_0.txt  states001_8_0.txt  states002.txt  states002_8_0.txt  states003.txt  states004.txt  states005.txt  states006.txt  states007.txt  states009.txt  states009_198_126.txt  states011.txt  states011_66_62.txt  states013.txt  states015.txt  states019.txt  states023.txt  states027.txt  states027_166_145.txt  states027_187_155.txt  states031.txt  states039.txt  states047.txt  states047_262_244.txt  states047_302_286.txt  states047_334_331.txt  states055.txt  states055_242_226.txt  states055_278_263.txt  states055_305_298.txt  states055_334_329.txt  states063.txt  states063_290_277.txt  states063_311_305.txt  states063_334_332.txt  states079.txt  states079_304_295.txt  states079_319_315.txt  states079_331_328.txt  (+25 more)
